[package]
name = "experiment_lib"
version = "0.1.0"
edition = "2021"
authors = ["Mark Mansi <markm@cs.wisc.edu>", "Bijan Tabatabai <btabatabai@wisc.edu>"]

[dependencies]
spurs = "0.9.0"
spurs-util = "0.3.0"
failure = "0.1.5"
failure_derive = "0.1.5"
chrono = "0.4.6"
serde = { version = "1.0.87", features = [ "derive" ] }
serde_json = "1.0.38"
runner-proc-macro = { path = "runner-proc-macro" }
