[package]
name = "libscail"
version = "0.1.0"
edition = "2021"
authors = ["Mark Mansi <markm@cs.wisc.edu>", "Bijan Tabatabai <btabatabai@wisc.edu>"]

[dependencies]
spurs = "0.9.2"
chrono = "0.4.6"
serde = { version = "1.0.210", features = [ "derive" ] }
serde_json = "1.0.128"
runner-proc-macro = { path = "runner-proc-macro" }
